--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,101 +1,131 @@
-<h1>Detalhes do Documento Fiscal</h1>
+<h1 class="text-4xl font-bold text-[#073b4c] mb-6">Detalhes do Documento Fiscal</h1>
 
-<h3>Informações do Documento</h3>
-<table class="table">
-  <tr>
-    <th>Série:</th>
-    <td><%= @document_detail.serie %></td>
-  </tr>
-  <tr>
-    <th>Número da NF:</th>
-    <td><%= @document_detail.nnf %></td>
-  </tr>
-  <tr>
-    <th>Data de Emissão:</th>
-    <td><%= @document_detail.dhemi.strftime("%d/%m/%Y %H:%M") %></td>
-  </tr>
-  <tr>
-    <th>Valor do Produto:</th>
-    <td><%= number_to_currency(@document_detail.vprod, unit: "R$") %></td>
-  </tr>
-  <tr>
-    <th>Valor do ICMS:</th>
-    <td><%= number_to_currency(@document_detail.vicms, unit: "R$") %></td>
-  </tr>
-  <tr>
-    <th>Valor do IPI:</th>
-    <td><%= number_to_currency(@document_detail.vipi, unit: "R$") %></td>
-  </tr>
-  <tr>
-    <th>Valor do PIS:</th>
-    <td><%= number_to_currency(@document_detail.vpis, unit: "R$") %></td>
-  </tr>
-  <tr>
-    <th>Valor do COFINS:</th>
-    <td><%= number_to_currency(@document_detail.vcofins, unit: "R$") %></td>
-  </tr>
-  <tr>
-    <th>Valor Total da NF:</th>
-    <td><%= number_to_currency(@document_detail.vnf, unit: "R$") %></td>
-  </tr>
-</table>
-
-<h3>Informações do Emitente</h3>
-<table class="table">
-  <tr>
-    <th>Nome:</th>
-    <td><%= @document_detail.emit.xnome %></td>
-  </tr>
-  <tr>
-    <th>CNPJ:</th>
-    <td><%= @document_detail.emit.cnpj %></td>
-  </tr>
-  <tr>
-    <th>Endereço:</th>
-    <td><%= @document_detail.emit.xlgr %>, <%= @document_detail.emit.nro %>, <%= @document_detail.emit.xbairro %>, <%= @document_detail.emit.xmun %>, <%= @document_detail.emit.uf %> - CEP: <%= @document_detail.emit.cep %></td>
-  </tr>
-</table>
-
-<h3>Informações do Destinatário</h3>
-<table class="table">
-  <tr>
-    <th>Nome:</th>
-    <td><%= @document_detail.dest.xnome %></td>
-  </tr>
-  <tr>
-    <th>CNPJ:</th>
-    <td><%= @document_detail.dest.cnpj %></td>
-  </tr>
-  <tr>
-    <th>Endereço:</th>
-    <td><%= @document_detail.dest.xlgr %>, <%= @document_detail.dest.nro %>, <%= @document_detail.dest.xbairro %>, <%= @document_detail.dest.xmun %>, <%= @document_detail.dest.uf %> - CEP: <%= @document_detail.dest.cep %></td>
-  </tr>
-</table>
-
-<h3>Detalhes dos Produtos</h3>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Produto</th>
-      <th>NCM</th>
-      <th>CFOP</th>
-      <th>Unidade</th>
-      <th>Quantidade</th>
-      <th>Valor Unitário</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @document_detail.dets.each do |det| %>
-      <tr>
-        <td><%= det.xprod %></td>
-        <td><%= det.ncm %></td>
-        <td><%= det.cfop %></td>
-        <td><%= det.ucom %></td>
-        <td><%= det.qcom %></td>
-        <td><%= number_to_currency(det.vuncom, unit: "R$") %></td>
+<h3 class="text-2xl font-semibold text-[#073b4c] mb-4">Informações do Documento</h3>
+<div class="overflow-x-auto mb-6">
+  <table class="min-w-full bg-white rounded shadow-md">
+    <tbody class="text-gray-700">
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Série:</th>
+        <td class="py-3 px-6"><%= @document_detail.serie %></td>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Número da NF:</th>
+        <td class="py-3 px-6"><%= @document_detail.nnf %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Data de Emissão:</th>
+        <td class="py-3 px-6"><%= @document_detail.dhemi.strftime("%d/%m/%Y %H:%M") %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Valor do Produto:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vprod, unit: "R$") %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Valor do ICMS:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vicms, unit: "R$") %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Valor do IPI:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vipi, unit: "R$") %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Valor do PIS:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vpis, unit: "R$") %></td>
+      </tr>
+      <tr class="border-b">
+        <th class="py-3 px-6 text-left">Valor do COFINS:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vcofins, unit: "R$") %></td>
+      </tr>
+      <tr>
+        <th class="py-3 px-6 text-left">Valor Total da NF:</th>
+        <td class="py-3 px-6"><%= number_to_currency(@document_detail.vnf, unit: "R$") %></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<%= link_to 'Voltar', reports_path, class: "btn btn-secondary" %>
+<!-- Container flex para Emitente e Destinatário lado a lado -->
+<div class="flex justify-between space-x-6 mb-6">
+  <!-- Informações do Emitente -->
+  <div class="w-1/2">
+    <h3 class="text-2xl font-semibold text-[#073b4c] mb-4">Informações do Emitente</h3>
+    <div class="overflow-x-auto">
+      <table class="min-w-full bg-white rounded shadow-md">
+        <tbody class="text-gray-700">
+          <tr class="border-b">
+            <th class="py-3 px-6 text-left">Nome:</th>
+            <td class="py-3 px-6"><%= @document_detail.emit.xnome %></td>
+          </tr>
+          <tr class="border-b">
+            <th class="py-3 px-6 text-left">CNPJ:</th>
+            <td class="py-3 px-6"><%= @document_detail.emit.cnpj %></td>
+          </tr>
+          <tr>
+            <th class="py-3 px-6 text-left">Endereço:</th>
+            <td class="py-3 px-6">
+              <%= @document_detail.emit.xlgr %>, <%= @document_detail.emit.nro %>, 
+              <%= @document_detail.emit.xbairro %>, <%= @document_detail.emit.xmun %>, 
+              <%= @document_detail.emit.uf %> - CEP: <%= @document_detail.emit.cep %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <!-- Informações do Destinatário -->
+  <div class="w-1/2">
+    <h3 class="text-2xl font-semibold text-[#073b4c] mb-4">Informações do Destinatário</h3>
+    <div class="overflow-x-auto">
+      <table class="min-w-full bg-white rounded shadow-md">
+        <tbody class="text-gray-700">
+          <tr class="border-b">
+            <th class="py-3 px-6 text-left">Nome:</th>
+            <td class="py-3 px-6"><%= @document_detail.dest.xnome %></td>
+          </tr>
+          <tr class="border-b">
+            <th class="py-3 px-6 text-left">CNPJ:</th>
+            <td class="py-3 px-6"><%= @document_detail.dest.cnpj %></td>
+          </tr>
+          <tr>
+            <th class="py-3 px-6 text-left">Endereço:</th>
+            <td class="py-3 px-6">
+              <%= @document_detail.dest.xlgr %>, <%= @document_detail.dest.nro %>, 
+              <%= @document_detail.dest.xbairro %>, <%= @document_detail.dest.xmun %>, 
+              <%= @document_detail.dest.uf %> - CEP: <%= @document_detail.dest.cep %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+<h3 class="text-2xl font-semibold text-[#073b4c] mb-4">Detalhes dos Produtos</h3>
+<div class="overflow-x-auto mb-6">
+  <table class="min-w-full bg-white rounded shadow-md">
+    <thead class="bg-[#073b4c] text-white">
+      <tr>
+        <th class="py-3 px-6 text-left">Produto</th>
+        <th class="py-3 px-6 text-left">NCM</th>
+        <th class="py-3 px-6 text-left">CFOP</th>
+        <th class="py-3 px-6 text-left">Unidade</th>
+        <th class="py-3 px-6 text-left">Quantidade</th>
+        <th class="py-3 px-6 text-left">Valor Unitário</th>
+      </tr>
+    </thead>
+    <tbody class="text-gray-700">
+      <% @document_detail.dets.each do |det| %>
+        <tr class="border-b">
+          <td class="py-3 px-6"><%= det.xprod %></td>
+          <td class="py-3 px-6"><%= det.ncm %></td>
+          <td class="py-3 px-6"><%= det.cfop %></td>
+          <td class="py-3 px-6"><%= det.ucom %></td>
+          <td class="py-3 px-6"><%= det.qcom %></td>
+          <td class="py-3 px-6"><%= number_to_currency(det.vuncom, unit: "R$") %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<%= link_to 'Voltar', reports_path, class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mb-4" %>
