--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-28 px-5 flex-1 mb-10">
+        <% unless devise_controller? %>
+          <%= render 'layouts/header' %>
+        <% end %>
       <%= yield %>
     </main>
   </body>
