--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,21 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex-1 mb-10">
-        <% unless devise_controller? %>
-          <%= render 'layouts/header' %>
-        <% end %>
+      <% unless devise_controller? %>
+        <%= render 'layouts/header' %>
+      <% end %>
+
+      <% if flash[:notice] %>
+        <div class="bg-green-100 border border-green-400 text-green-700 px-4 py-3 rounded relative mb-4">
+          <span class="block sm:inline"><%= flash[:notice] %></span>
+        </div>
+      <% end %>
+
+      <% if flash[:alert] %>
+        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative mb-4">
+          <span class="block sm:inline"><%= flash[:alert] %></span>
+        </div>
+      <% end %>
       <%= yield %>
     </main>
   </body>
