--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -128,4 +128,6 @@
     </tbody>
   </table>
 </div>
+
+<%= link_to 'Fazer Download dos Detalhes', download_report_path(@document_detail), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mb-4" %>
 <%= link_to 'Voltar', reports_path, class: "bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mb-4" %>
