--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -1,19 +1,17 @@
 <div class="flex flex-col items-center mt-10">
-  <!-- Título e Botão ao lado -->
   <div class="flex items-center justify-between w-full max-w-7xl mb-6">
-    <h1 class="text-4xl font-bold text-[#073b4c]">Documentos Processados</h1>
-    <%= link_to "Processar Novo Documento", new_document_path, class: "bg-[#073b4c] hover:bg-[#004385] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
+    <h1 class="text-4xl font-bold text-[#073b4c]"><%= t('views.documents.index.title') %></h1>
+    <%= link_to t('views.documents.index.new_document'), new_document_path, class: "bg-[#073b4c] hover:bg-[#004385] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" %>
   </div>
 
-  <!-- Tabela centralizada -->
   <div class="w-full max-w-7xl">
     <div class="overflow-x-auto">
       <table class="min-w-full bg-white rounded shadow-md">
         <thead class="bg-[#073b4c] text-white">
           <tr>
-            <th class="py-3 px-6 text-left">Arquivo</th>
-            <th class="py-3 px-6 text-left">Data de Envio</th>
-            <th class="py-3 px-6 text-left">Ações</th>
+            <th class="py-3 px-6 text-left"><%= t('views.documents.index.table_headers.file') %></th>
+            <th class="py-3 px-6 text-left"><%= t('views.documents.index.table_headers.upload_date') %></th>
+            <th class="py-3 px-6 text-left"><%= t('views.documents.index.table_headers.actions') %></th>
           </tr>
         </thead>
         <tbody class="text-gray-700">
@@ -27,7 +25,7 @@
               </td>
               <td class="py-3 px-6">
                 <div class="flex space-x-2">
-                  <%= link_to "Excluir", document_path(document), data: { turbo_confirm: 'Tem certeza que deseja excluir este documento?', turbo_method: :delete }, class: "bg-red-600 hover:bg-red-800 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline" %>
+                  <%= link_to t('views.documents.index.delete'), document_path(document), data: { turbo_confirm: t('views.documents.index.delete_confirmation'), turbo_method: :delete }, class: "bg-red-600 hover:bg-red-800 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline" %>
                 </div>
               </td>
             </tr>
