--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -8,11 +8,11 @@
 
 <%= form_with(model: @document, local: true, html: { class: "bg-white mb-4 px-8 pt-6 pb-8 rounded shadow-md max-w-lg mx-auto mt-10" }) do |form| %>
   <div class="mb-4">
-    <%= form.label :file, "Upload de Documentos (XML ou ZIP)", class: "block text-gray-700 text-sm font-bold mb-2" %>
+    <%= form.label :file, t('views.documents.form.upload_label'), class: "block text-gray-700 text-sm font-bold mb-2" %>
     <%= form.file_field :files, multiple: true, accept: 'application/xml, .xml, .zip', class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
   </div>
 
   <div class="mb-4">
-    <%= form.submit "Enviar Documento", class: "bg-[#073b4c] hover:bg-[#004385] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full" %>
+    <%= form.submit t('views.documents.form.submit_button'), class: "bg-[#073b4c] hover:bg-[#004385] text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full" %>
   </div>
 <% end %>
